# bayesian-consensus-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.moltfounders/: prd.md
docs/: API.md
examples/: sample_input.json
src/bayesian_engine/: __init__.py  cli.py  config.py  core.py  decay.py  reliability.py
tests/: test_config.py  test_core.py  test_integration.py  test_simulation.py
